--- a/btc_styles/media-and-career.css
+++ b/btc_styles/media-and-career.css
@@ -2,17 +2,14 @@
   width: 95%;
   max-width: 1100px;
   margin-inline: auto;
-}
-
-.mac__inner * {
-  font-family: Yu Gothic;
+  font-family: 'Yu Gothic', 'Hiragino Kaku Gothic ProN', 'メイリオ', Meiryo, sans-serif;
   font-weight: 500;
   line-height: 1.5;
 }
 
 .mac {
   padding-top: clamp(60px, 10vw, 100px);
-  padding-bottom: clamp(50px, 10vw, 100px);
+  padding-bottom: clamp(50px, 10vw, 150px);
 }
 
 .mac + .mac {
@@ -40,12 +37,13 @@
   margin-top: 5px;
 }
 
-.mac__name span {
+.mac__name-en {
   color: #01b00e;
   font-size: 13px;
   margin-left: 20px;
   vertical-align: middle;
   letter-spacing: 0.1em;
+  font-weight: normal;
 }
 
 .mac__sns {
@@ -57,7 +55,7 @@
 }
 
 .mac__sns::before {
-  content: "";
+  content: '';
   background-color: #01b00e;
   width: clamp(90px, 16vw, 160px);
   height: 2px;
@@ -68,7 +66,7 @@
 }
 
 .mac__sns::after {
-  content: "";
+  content: '';
   background-color: #e3e8ec;
   width: 100%;
   height: 2px;
@@ -173,6 +171,24 @@
   margin-top: 115px;
 }
 
+.mac__btn {
+  color: #01b00e;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  border: 1px solid #01b00e;
+  background: #fff;
+  width: 100%;
+  max-width: 270px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 65px;
+}
+
 @media screen and (max-width: 1200px) {
   .mac__media {
     grid-template-columns: repeat(3, 1fr);
@@ -203,5 +219,12 @@
   .mac__media-date {
     margin-top: 10px;
     display: block;
+  }
+
+  .mac__btn {
+    font-size: 14px;
+    margin-top: 40px;
+    height: 50px;
+    max-width: 250px;
   }
 }
