--- a/btc_styles/media-and-career.css
+++ b/btc_styles/media-and-career.css
@@ -18,7 +18,7 @@
   max-width: 100%;
   height: auto;
   position: relative;
-  display: block;
+  vertical-align: bottom;
 }
 
 .mac {
@@ -193,6 +193,14 @@
   margin-top: clamp(5px, 1.5vw, 15px);
 }
 
+.mac__media-item {
+  max-width: 240px;
+}
+
+.mac__img {
+  text-align: center;
+}
+
 /* .mac__media-img img {
   width: 100%;
   height: auto;
@@ -263,5 +271,12 @@
     margin-top: 40px;
     height: 50px;
     max-width: 250px;
+  }
+
+  .mac__dd {
+    padding-inline: 5px clamp(5px, 1.5vw, 12px);
+  }
+  .mac__dt {
+    padding-inline: clamp(5px, 1.5vw, 12px) 5px;
   }
 }
